--- a/README.org
+++ b/README.org
@@ -59,7 +59,9 @@ git clone
 #+END_SRC
 * Git vs Otros entornos. ¿Por qué git?
 ** SVN
+- Centralizado: Solo un repo.
 ** Mercurial
+- Distribuido, misma filosofía que git
 * Estructura de Git
 * Comandos de git. Desde lo más útiles a los salvavidas
 ** Add & Commit
