--- a/README.org
+++ b/README.org
@@ -117,11 +117,19 @@ git pull origin # git fetch && git merge FETCH_HEAD
 ** Conflictos
 * Buenas praxis de git
 * Magit
+[[./img/Emacs-icon.png]]
 * Integración con otras herramientas/entornos
-* Recuros
+*** 
+[[./img/git_kraken.png]]
+*** 
+[[./img/SourceTreeLogo.png]]
+** Eclipse (sí...)
+[[./img/EclipseLogo.png]]
+* Recursos
 - [[https://git-scm.com/book/en/v2][Git Book]]
   - PDF, EPUB, MOBI, HTML
 - [[https://try.github.io/levels/1/challenges/1][try.github.io]]
+- [[https://guides.github.com/][guides.github.com]]
 
 * Preguntas
 
