--- a/README.org
+++ b/README.org
@@ -66,10 +66,23 @@ git remote add {nombreDelRemoto} {URLDelRepositorio}
 git clone
 #+END_SRC
 * Git vs Otros entornos. ¿Por qué git?
+- Porque sí. ¿Esperabas una respuesta mejor? Pues no.
 ** SVN
-- Centralizado: Solo un repo.
+- Pros:
+  - Sencillez. 
+- Contras: 
+  - Solo existe un repo, imposible trabajar en local.
+  - No es git.
+  - Sencillez.
 ** Mercurial
-- Distribuido, misma filosofía que git
+Bitbucket.
+- Pros:
+  - Simple pero casi igual de potente que git.
+  - Newbie friendly.
+- Contras:
+  - ¿Trabajar con ramas?. Iluso...
+  - Monolítico.
+  - Menos flexible.
 * Estructura de Git
 [[./img/git-parts-repo.png]]
 * Comandos de git. Desde lo más útiles a los salvavidas
@@ -118,8 +131,15 @@ git pull origin # git fetch && git merge FETCH_HEAD
 ** Merge
 ** Conflictos
 * Buenas praxis de git
+- No te asustes.
+- Las ramas son tus amigas.
+- Commitea a menudo con cambios graduales y específicos.
+- Ponle un mensaje útil a los mensajes.
+- No todos los aportes son iguales: Las ramas son tus amigas.
 * Magit
 * Integración con otras herramientas/entornos
+- ¡Git está para Güindous! https://git-scm.com/download/win 
+  Integra git en windows dándote, además, una terminal que simula una terminal linux
 * Recuros
 - [[https://git-scm.com/book/en/v2][Git Book]]
   - PDF, EPUB, MOBI, HTML
