--- a/README.org
+++ b/README.org
@@ -161,6 +161,12 @@ git rebase [branch] # Rebase. Por cada commit que hay en el branch, rebase gener
 #+END_SRC
 
 ** Conflictos
+*** 
+Lo que no ha unido la máquina, que lo haga el desarrollador.
+#+attr_html: :width 65%
+[[./img/conflict.png]]
+#+attr_html: :width 65%
+[[./img/conflictSolved.png]]
 * Buenas praxis de git
 - No te asustes.
 - Las ramas son tus amigas.
