--- a/README.org
+++ b/README.org
@@ -32,10 +32,16 @@
 * Introdución
 ** Control de versiones
 *** 
+Control de versiones local, único ordenador.
+#+attr_html: :width 60%
  [[./img/local.png]]
 *** 
+Control de versión centralizado.
+#+attr_html: :width 60%
 [[./img/centralized.png]]
 *** 
+Control de versión distribuido.
+#+attr_html: :width 45%
 [[./img/distributed.png]]
 
 ** GIT
@@ -66,8 +72,23 @@ git remote add {nombreDelRemoto} {URLDelRepositorio}
 git clone
 #+END_SRC
 * Git vs Otros entornos. ¿Por qué git?
+- Porque sí. ¿Esperabas una respuesta mejor? Pues no.
 ** SVN
+- Pros:
+  - Sencillez. 
+- Contras: 
+  - Solo existe un repo, imposible trabajar en local.
+  - No es git.
+  - Sencillez.
 ** Mercurial
+Bitbucket.
+- Pros:
+  - Simple pero casi igual de potente que git.
+  - Newbie friendly.
+- Contras:
+  - ¿Trabajar con ramas?. Iluso...
+  - Monolítico.
+  - Menos flexible.
 * Estructura de Git
 [[./img/git-parts-repo.png]]
 * Comandos de git. Desde lo más útiles a los salvavidas
@@ -94,6 +115,7 @@ git commit -m "Hello World Completado"
 git commit -a -m <mensaje> # Equivalente a git add --all y git commit -m "Mensaje"
 
 #+END_SRC
+
 ** Push
 #+BEGIN_SRC bash
 
@@ -113,18 +135,49 @@ git pull
 git pull origin # git fetch && git merge FETCH_HEAD
 
 #+END_SRC
-** Merge
+** Merge & Rebase
+
+#+BEGIN_SRC bash
+git merge [branch] # Mergea branch con la actual
+
+       A---B---C topic
+      /         \
+ D---E---F---G---H master
+   kbranch      merge
+
+git merge [-m "Mensaje del commit"] [branch] # Mergra branch con la actual y lo incluye en un commit
+
+git merge [--abort] # Aborta el merge si entran en conflicto
+
+git rebase [branch] # Rebase. Por cada commit que hay en el branch, rebase genera un nuevo commit en el branch actual
+
+      +--3--5   master
+      |
+1--2--+
+      |
+      +--3--5--7--8   feature
+              (4)(6)
+    branch    rebase
+#+END_SRC
+
 ** Conflictos
+*** 
+Lo que no ha unido la máquina, que lo haga el desarrollador.
+#+attr_html: :width 75%
+[[./img/conflict.png]]
+#+attr_html: :width 75%
+[[./img/conflictSolved.png]]
 * Buenas praxis de git
+- No te asustes.
+- Las ramas son tus amigas.
+- Commitea a menudo con cambios graduales y específicos.
+- Ponle un mensaje útil a los mensajes.
+- No todos los aportes son iguales: Las ramas son tus amigas.
 * Magit
 [[./img/Emacs-icon.png]]
 * Integración con otras herramientas/entornos
-*** 
-[[./img/git_kraken.png]]
-*** 
-[[./img/SourceTreeLogo.png]]
-** Eclipse (sí...)
-[[./img/EclipseLogo.png]]
+- ¡Git está para Güindous! https://git-scm.com/download/win 
+  Integra git en windows dándote, además, una terminal que simula una terminal linux
 * Recursos
 - [[https://git-scm.com/book/en/v2][Git Book]]
   - PDF, EPUB, MOBI, HTML
