--- a/README.org
+++ b/README.org
@@ -173,6 +173,12 @@ Lo que no ha unido la máquina, que lo haga el desarrollador.
 - Commitea a menudo con cambios graduales y específicos.
 - Ponle un mensaje útil a los mensajes.
 - No todos los aportes son iguales: Las ramas son tus amigas.
+*** 
+#+ATTR_REVEAL: :frag (appear)
+- Lee
+- Lee mucho
+- [[https://guides.github.com/introduction/flow/][El flow de Github]] (que no git)
+- [[https://about.gitlab.com/2014/09/29/gitlab-flow/][Gitlab también tiene su flow]]
 * Magit
 [[./img/Emacs-icon.png]]
 * Integración con otras herramientas/entornos
@@ -183,6 +189,7 @@ Lo que no ha unido la máquina, que lo haga el desarrollador.
   - PDF, EPUB, MOBI, HTML
 - [[https://try.github.io/levels/1/challenges/1][try.github.io]]
 - [[https://guides.github.com/][guides.github.com]]
+- [[https://about.gitlab.com/blog/archives.html][about.gitlab.com/blog/]]
 
 * Preguntas
 
