--- a/README.org
+++ b/README.org
@@ -44,7 +44,9 @@ Control de versión distribuido.
 #+attr_html: :width 45%
 [[./img/distributed.png]]
 
-** GIT
+** 
+[[./img/git-logo.png]]
+*** 
 - Control de versiones
 - Potencia el desarrollo de código distribuido.
 - Y mola mucho
@@ -73,6 +75,8 @@ git clone
 #+END_SRC
 * Git vs Otros entornos. ¿Por qué git?
 - Porque sí. ¿Esperabas una respuesta mejor? Pues no.
+- Es lo que toca porque lo vamos a usar en las asignaturas.
+- También es la herramienta más extendida y a la que todas migran.
 ** SVN
 - Pros:
   - Sencillez. 
@@ -96,6 +100,16 @@ Bitbucket.
 [[./img/git-flow.png]]
 
 * Comandos de git. Desde lo más útiles a los salvavidas
+
+** Git Status
+
+#+BEGIN_SRC bash
+
+git status
+
+#+END_SRC
+
+[[./img/git-status.gif]]
 ** Add & Commit
 
 #+BEGIN_SRC bash
@@ -130,6 +144,20 @@ git push #Equivalente a git push <remote>, solo si existe el remoto
 git push <remote> master # push de los cambios a la rama master del remoto
 
 #+END_SRC
+** Log
+#+BEGIN_SRC bash
+git log
+#+END_SRC
+[[./img/git-log-bad.jpg]]
+*** 
+- Si usáis terminal para git, es recomendable tener alias.
+- [[http://durdn.com/blog/2012/11/22/must-have-git-aliases-advanced-examples/][Ejemplos de alias]]
+*** 
+#+BEGIN_SRC bash
+git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+#+END_SRC
+[[./img/git-log-good.jpg]]
+
 ** Pull
 
 #+BEGIN_SRC bash
@@ -138,6 +166,17 @@ git pull
 
 git pull origin # git fetch && git merge FETCH_HEAD
 
+#+END_SRC
+** Branch
+#+BEGIN_SRC bash
+git branch [opts] <nombre_de_la_rama> #Para listar, crear o eliminar ramas
+#+END_SRC
+*** 
+#+attr_html: :width 45%
+[[./img/git-flow.png]]
+** Checkout
+#+BEGIN_SRC bash
+git checkout <nombre_de_la_rama>
 #+END_SRC
 ** Merge & Rebase
 
@@ -171,6 +210,13 @@ Lo que no ha unido la máquina, que lo haga el desarrollador.
 [[./img/conflict.png]]
 #+attr_html: :width 75%
 [[./img/conflictSolved.png]]
+** Stash
+#+BEGIN_SRC bash
+git stash
+#+END_SRC
+
+Usado para descartar cambios y volver al estado anterior del commit.
+** Rebase, Fetch, Pull Request
 * Buenas praxis de git
 - No te asustes.
 - Las ramas son tus amigas.
