--- a/README.org
+++ b/README.org
@@ -53,12 +53,17 @@ Control de versión distribuido.
 ** Instalar GIT
 
 #+BEGIN_SRC bash
+sudo pacman -S git #Arch based
 
-sudo pacman -S git
+sudo apt-get install git #Debian based
 
-sudo apt-get install git
-
+brew install git #macOS
 #+END_SRC
+
+- ¡Git está para Güindous! https://git-scm.com/download/win 
+  Integra git en windows dándote, además, una terminal que simula una
+  terminal linux
+
 *** Configurar GIT
 
 #+BEGIN_SRC bash
@@ -217,12 +222,15 @@ git stash
 
 Usado para descartar cambios y volver al estado anterior del commit.
 ** Rebase, Fetch, Pull Request
+* ¿Preguntas?
 * Buenas praxis de git
 - No te asustes.
 - Las ramas son tus amigas.
 - Commitea a menudo con cambios graduales y específicos.
 - Ponle un mensaje útil a los mensajes.
 - No todos los aportes son iguales: Las ramas son tus amigas.
+- gitignore
+- NO HAY UNA ÚNICA FORMA DE HACER ALGO CON GIT
 *** 
 #+ATTR_REVEAL: :frag (appear)
 - Lee
@@ -235,15 +243,34 @@ Usado para descartar cambios y volver al estado anterior del commit.
 * Magit
 [[./img/Emacs-icon.png]]
 * Integración con otras herramientas/entornos
-- ¡Git está para Güindous! https://git-scm.com/download/win 
-  Integra git en windows dándote, además, una terminal que simula una terminal linux
+*** 
+#+attr_html: :width 50%
+[[./img/git_kraken.png]]
+
+[[https://www.gitkraken.com/][www.gitkraken.com]]
+*** 
+#+attr_html: :width 50%
+[[./img/SourceTreeLogo.png]]
+
+[[https://www.sourcetreeapp.com/][www.sourcetreeapp.com]]
+** Eclipse (sí...)
+#+attr_html: :width 65%
+[[./img/EclipseLogo.png]]
+
+[[http://www.eclipse.org/egit/][www.eclipse.org/egit]]
+** Y más
+- Matlab, Visual Studio...
+** Platafromas (host)
+#+attr_html: :width 70%
+[[./img/chart-comparision.png]]
+*** Github
+[[./img/github-integration.png]]
 * Recursos
 - [[https://git-scm.com/book/en/v2][Git Book]]
   - PDF, EPUB, MOBI, HTML
 - [[https://try.github.io/levels/1/challenges/1][try.github.io]]
 - [[https://guides.github.com/][guides.github.com]]
 - [[https://about.gitlab.com/blog/archives.html][about.gitlab.com/blog/]]
-
-* Preguntas
-
-*** TODO Proyecto
+  
+* ¿Preguntas?
+    
