Github education + lifecycle

--- a/README.org
+++ b/README.org
@@ -117,6 +117,9 @@ git status
 [[./img/git-status.gif]]
 ** Add & Commit
 
+[[./img/file-status-livecycle.png]]
+
+*** 
 #+BEGIN_SRC bash
 
 git add [files]
@@ -265,6 +268,13 @@ Usado para descartar cambios y volver al estado anterior del commit.
 [[./img/chart-comparision.png]]
 *** Github
 [[./img/github-integration.png]]
+*** Github Education
+
+- Repositorios privados ilimitados durante 2 años
+
+
+[[https://education.github.com/][education.github.com]]
+
 * Recursos
 - [[https://git-scm.com/book/en/v2][Git Book]]
   - PDF, EPUB, MOBI, HTML
